--- a/artist.html
+++ b/artist.html
@@ -26,23 +26,101 @@
     <!-- SUDDIVISIONE COLONNE-->
     <div class="container-fluid m-0 p-0">
 
-        <div class="row main-content">
+        <div class="row main-content p-0 m-0">
             <!-- SX -->
-            <div class="d-flex">
+            <div class="d-flex p-0">
                 <!-- PRIMA COLONNA-->
-                <nav class="col-2 bg-black d-flex flex-column vh-100  pt-3">
-                    <p class="bi bi-three-dots"></p>
-                    <a href="./index.html" class="bi bi-house-fill link-item">&nbspHome</a>
-                    <a href="./search.html" class="bi bi-search link-item">&nbspCerca</a>
-                    <p class="bi bi-music-note-list mb-4">&nbspLa tua libreria</p>
-                    <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
-                        &nbspCrea playlist
-                    </p>
-                    <p class="bi bi-heart-fill">&nbspBrani che ti piacciono</p>
-                    <p class="bi bi-bookmark-fill">&nbspI tuoi episodi</p>
-                    <hr />
-                    <div class="overflow-auto">
+                <nav class="col-3 bg-black d-flex flex-column vh-100 px-4 py-3 m-0">
+                    <div class="mb-4">
+                        <div class="col-12 mb-2">
+                            <div>
+                                <i class="bi bi-three-dots"></i>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex align-items-center mb-2">
+                            <a href="index.html" class="text-decoration-none text-light d-flex align-items-center">
+                            <div class="me-3">
+                                <i class="bi bi-house-fill"></i>
+                            </div>
+                            <div>
+                                <span>Home</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-12  d-flex align-items-center mb-2">
+                            <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
+                            <div class="me-3">
+                                <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true"
+                                    fill="currentColor"
+                                    class="Svg-sc-ytk21e-0 bneLcE search-active-icon QbaKKdcHNA2x3_YJvpYu"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div>
+                                <span>Cerca</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-12  d-flex align-items-center">
+                            <div class="me-3">
+                                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" width="19"
+                                    height="19" fill="currentColor" class="Svg-sc-ytk21e-0 bneLcE">
+                                    <path
+                                        d="M14.5 2.134a1 1 0 0 1 1 0l6 3.464a1 1 0 0 1 .5.866V21a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1V3a1 1 0 0 1 .5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zm6 0a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div>
+                                <span>La tua libreria</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-bottom border-secondary">
+                        <div class="col-12 d-flex align-items-center mb-2" role="button" onclick="createPlaylist()">
+                            <div class="me-3">
+                                <i class="bi bi-plus-square-fill"></i>
+                            </div>
+                            <div>
+                                <span>Crea playlist</span>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex align-items-center mb-2">
+                            <div class="me-3">
+                                <img aria-hidden="true" draggable="false" loading="eager"
+                                    src="https://misc.scdn.co/liked-songs/liked-songs-64.png" data-testid="entity-image"
+                                    alt="Liked Songs" width="20" height="20" style="border-radius: 2px;"
+                                    class="mMx2LUixlnN_Fu45JpFB iJp40IxKg6emF6KYJ414 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
+                                    srcset="
+                    https://misc.scdn.co/liked-songs/liked-songs-64.png 32w,
+                    https://misc.scdn.co/liked-songs/liked-songs-64.png 64w
+                  " />
+                            </div>
+                            <div>
+                                <span> Brani che ti piacciono</span>
+                            </div>
+                        </div>
+                        <div class="col-12 d-flex align-items-center mb-4">
+                            <div class="me-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green"
+                                    class="bi bi-bookmark-fill bg-green p-1" viewBox="0 0 16 16"
+                                    style="background-color: #074537; border-radius: 2px;">
+                                    <path
+                                        d="M2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2" />
+                                </svg>
+                            </div>
+                            <div>
+                                <span> I tuoi episodi </span>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="overflow-auto playlist-font">
                         <!-- SEZIONE PLAYLIST-->
+
                         <ul class="navbar-nav" id="playlist-index">
                             <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
                         </ul>
@@ -222,6 +300,9 @@
                   </div>
                   </div> -->
                                     </div>
+                                    <div class="col-12 my-3">
+                                        <button id="btnOfExpand" class="btn btn-outline-light">SHOW MORE</button>
+                                      </div>
                                 </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
                                 <div class="col-6">
@@ -229,17 +310,8 @@
                                         <h3>Brani che ti piacciono</h3>
                                     </div>
                                     <div class="d-flex align-items-center" id="imgSm">
-                                        <div id="liked-img" class="me-3">
-                                        <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="img-fluid ">
-                                    </div>
-                                        <div>
-                                            <div>
-                                            <h6 class="m-0"> Hai messo Mi piace a ....</h6>
-                                        </div>
-                                        <div>
-                                            <p class="m-0">Di ....</p>
-                                        </div>
-                                        </div>
+                                   
+                                        
                                     </div>
                                 </div> <!-- DIV FINALE DELLA MAXI COL-3-->
                             </div> <!--DIV FINALE DELLA ROW CHE RACCHIUDE LE MAXI COL-6 COL-3-->
