--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- SUDDIVISIONE COLONNE-->
     <div class="container-fluid m-0 p-0">
 
-        <div class="row">
+        <div class="row m-0">
             <!-- SX -->
-            <div class="d-flex">
+            <div class="d-flex p-0">
                 <!-- PRIMA COLONNA-->
                 <nav class="col-3 bg-black d-flex flex-column vh-100 px-4 py-3 m-0">
                     <div class="mb-4">
@@ -29,15 +29,18 @@
                                 <i class="bi bi-three-dots"></i>
                             </div>
                         </div>
-                        <div id="threeDot" class="col-12 d-flex align-items-center mb-2">
+                        <div class="col-12 d-flex align-items-center mb-2">
+                            <a href="index.html" class="text-decoration-none text-light d-flex align-items-center">
                             <div class="me-3">
                                 <i class="bi bi-house-fill"></i>
                             </div>
                             <div>
                                 <span>Home</span>
                             </div>
+                        </a>
                         </div>
                         <div class="col-12  d-flex align-items-center mb-2">
+                            <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
                             <div class="me-3">
                                 <svg data-encore-id="icon" role="img" width="19" height="19" aria-hidden="true"
                                     fill="currentColor"
@@ -49,8 +52,9 @@
                                 </svg>
                             </div>
                             <div>
-                                <a href="search.html" class="text-decoration-none text-light"><span>Cerca</span></a>
+                                <span>Cerca</span>
                             </div>
+                        </a>
                         </div>
                         <div class="col-12  d-flex align-items-center">
                             <div class="me-3">
@@ -333,7 +337,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
                     <!-- Altro di ciò che ti piace -->
                     <section class="mb-5">
@@ -342,7 +346,7 @@
                             <p class="text-secondary">VISUALIZZA TUTTO</p>
                         </div>
                         <div class="row row-cols-2 row-cols-md-5" id="altro_che_ti_piace">
-                            
+
                         </div>
                     </section>
 
@@ -565,26 +569,6 @@
 
                     <div class="container-fluid mt-5"> <!-- CONTENUTO FRIEND ACTIVITIES -->
                         <div class="row d-flex align-items-start" id="cards-friend">
-                            <div class="col-1"> <!-- FOTO PROFILO -->
-                                <img src="assets/imgs/main/image-9.jpg"
-                                    class="img-fluid rounded-pill img-cards-friend" />
-                            </div>
-                            <div class="col-8 lh-sm justify-content-start"> <!-- BRANO ASCOLTATO -->
-                                <ul class="navbar-nav">
-                                    <li class="fw-bold pb-2 mt-1">lightdark02</li>
-                                    <li>Aimed to Kill &middot Jade LeMac</li>
-                                    <li class="pt-2"><i class="bi bi-disc"></i>Aimed to Kill</li>
-                                </ul>
-                            </div>
-                            <div class="col-3"> <!-- QUANTO TEMPO FA' -->
-                                <p>8 ore</p>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="container-fluid mt-5"> <!-- CONTENUTO FRIEND ACTIVITIES -->
-                        <div class="row d-flex align-items-start" id="cards-friend">
                             <div class="col-3"> <!-- FOTO PROFILO -->
                                 <img src="assets/imgs/main/image-19.jpg"
                                     class="img-fluid rounded-pill img-cards-friend" />
@@ -602,8 +586,8 @@
                         </div>
                     </div>
 
-
                 </div>
+
             </div>
         </div>
         <!-- FOOTER -->
@@ -646,12 +630,13 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="assets/JS/index.js"></script>
+    <script src="assets/JS/playlist.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-        <script src="assets/JS/index.js"></script>
-        <script src="assets/JS/playlist.js"></script>
 </body>
 
 </html>
