--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
 
 
                     <!-- Altro di ciò che ti piace -->
@@ -272,7 +272,7 @@
                             <p class="text-secondary">VISUALIZZA TUTTO</p>
                         </div>
                         <div class="row row-cols-2 row-cols-md-5" id="altro_che_ti_piace">
-                            
+
                         </div>
                     </section>
 
@@ -537,39 +537,135 @@
             </div>
         </div>
         <!-- FOOTER -->
-        <footer class=" d-flex align-items-center p-4 border-top border-dark">
+        <footer class="d-flex align-items-center p-4 border-top border-dark">
             <div class="container-fluid m-0">
                 <div class="row">
+                    <!-- PLAYER SX -->
                     <div class="col-3 d-flex align-items-center gap-2">
-                        <div class="imgPlayer me-3">
-                            <img src="assets/imgs/search/image-13.jpeg" class="img-fluid" />
+                        <div id="imgPlayer" class="imgPlayer me-3 p-1">
+                            <img src="">
                         </div>
-                        <div class="d-flex flex-column justify-content-center me-4">
-                            <span class="fw-bold">Fat Funny Friend</span>
-                            <span class="fw-lighter">Matilde Zahn</span>
+                        <div class="d-flex flex-column justify-content-center me-4 containerMarquee">
+                            <div id="marquee">
+                                <span id="nameTrack" class="fw-bold"></span>
+                            </div>
+                            <div>
+                                <span id="nameArt" class="fw-lighter"></span>
+                            </div>
                         </div>
                         <div class="fs-5">
-                            <i role="button" class="bi bi-heart"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="19" fill="currentColor" class="bi bi-heart"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                            </svg>
                         </div>
                     </div>
-                    <div class="col-6 d-flex justify-content-center align-items-center">
-                        <div class="w-100 d-flex justify-content-center gap-4 fs-4 align-items-center">
-                            <i role="button" class="bi bi-shuffle"></i>
-                            <i role="button" class="bi bi-skip-backward-fill"></i>
-                            <i role="button" class="bi bi-play-circle-fill fs-2" id="play_simbol"></i>
-                            <i role="button" class="bi bi-skip-forward-fill"></i>
-                            <i role="button" class="bi bi-repeat"></i>
+
+                    <!-- PLAYER CENTRALE -->
+                    <div class="col-6 d-flex flex-column justify-content-center">
+                        <div class="buttons d-flex justify-content-center align-items-center">
+                            <div class="pe-4">
+                                <svg data-encore-id="icon" width="21" color="white" role="img" aria-hidden="true"
+                                    viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI text-primary" fill="#BBBEC1">
+                                    <path
+                                        d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z">
+                                    </path>
+                                    <path
+                                        d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z">
+                                    </path>
+                                </svg>
+
+                            </div>
+                            <div class="prev-track pe-4" onclick="prevTrack()">
+                                <svg data-encore-id="icon" role="img" width="18" aria-hidden="true" viewBox="0 0 16 16"
+                                    class="Svg-sc-ytk21e-0 dYnaPI" fill="currentColor">
+                                    <path
+                                        d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div class="playpause-track pe-4" onclick="playpauseTrack()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" fill="currentColor"
+                                    class="bi bi-play-circle-fill play-btn" viewBox="0 0 16 16">
+                                    <path
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z" />
+                                </svg>
+
+                            </div>
+                            <div class="next-track pe-4" onclick="nextTrack()">
+                                <svg data-encore-id="icon" width="18" role="img" aria-hidden="true" viewBox="0 0 16 16"
+                                    fill="currentColor" class="Svg-sc-ytk21e-0 dYnaPI">
+                                    <path
+                                        d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg data-encore-id="icon" role="img" aria-hidden="true" width="19" viewBox="0 0 16 16"
+                                    class="Svg-sc-ytk21e-0 dYnaPI" fill="#BBBEC1">
+                                    <path
+                                        d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z">
+                                    </path>
+                                </svg>
+
+                            </div>
+                        </div>
+
+                        <div class="slider_container d-flex align-items-center">
+                            <div class="container-fluid">
+                                <div class="row d-flex align-items-center">
+                                    <div class="col-2 pe-0 text d-flex justify-content-end">
+                                        <div class="current-time pe-3">00:00</div>
+                                    </div>
+                                    <div class="col-8 d-flex align-items-center">
+                                        <input type="range" min="1" max="100" value="0" class="seek_slider"
+                                            onchange="seekTo()" />
+                                    </div>
+                                    <div class="col-2 d-flex ps-0 justify-content-start">
+                                        <div class="total-duration ps-3">00:00</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-3 d-flex align-items-center justify-content-end gap-2">
                         <div class="d-flex align-items-center gap-3 fs-5 me-1">
-                            <i role="button" class="bi bi-mic"></i>
-                            <i role="button" class="bi bi-list"></i>
-                            <i role="button" class="bi bi-speaker"></i>
-                            <i role="button" class="bi bi-volume-up"></i>
-                        </div>
-                        <div class="bg-light w-25 barWhite me-1"></div>
-                        <div>
+                            <div>
+                                <svg data-encore-id="icon" role="img" aria-hidden="true" width="18" viewBox="0 0 16 16"
+                                    class="Svg-sc-ytk21e-0 dYnaPI" fill="currentColor">
+                                    <path
+                                        d="M13.426 2.574a2.831 2.831 0 0 0-4.797 1.55l3.247 3.247a2.831 2.831 0 0 0 1.55-4.797zM10.5 8.118l-2.619-2.62A63303.13 63303.13 0 0 0 4.74 9.075L2.065 12.12a1.287 1.287 0 0 0 1.816 1.816l3.06-2.688 3.56-3.129zM7.12 4.094a4.331 4.331 0 1 1 4.786 4.786l-3.974 3.493-3.06 2.689a2.787 2.787 0 0 1-3.933-3.933l2.676-3.045 3.505-3.99z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg data-encore-id="icon" role="img" aria-hidden="true" width="18" viewBox="0 0 16 16"
+                                    fill="currentColor" class="Svg-sc-ytk21e-0 dYnaPI">
+                                    <path
+                                        d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 0 1 3.5 1h9a2.5 2.5 0 0 1 0 5h-9A2.5 2.5 0 0 1 1 3.5zm2.5-1a1 1 0 0 0 0 2h9a1 1 0 1 0 0-2h-9z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg data-encore-id="icon" role="presentation" aria-hidden="true" width="18"
+                                    fill="currentColor" class="Svg-sc-ytk21e-0 dYnaPI" viewBox="0 0 16 16">
+                                    <path
+                                        d="M6 2.75C6 1.784 6.784 1 7.75 1h6.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15h-6.5A1.75 1.75 0 0 1 6 13.25V2.75zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h6.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-6.5zm-6 0a.25.25 0 0 0-.25.25v6.5c0 .138.112.25.25.25H4V11H1.75A1.75 1.75 0 0 1 0 9.25v-6.5C0 1.784.784 1 1.75 1H4v1.5H1.75zM4 15H2v-1.5h2V15z">
+                                    </path>
+                                    <path d="M13 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm-1-5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <div class="slider_container">
+
+                                <i class="fa fa-volume-down pe-3"></i>
+                                <input type="range" min="0" max="100" value="99" class="volume_slider"
+                                    oninput="setVolume()" />
+                                <i class="fa fa-volume-up ps-3"></i>
+                            </div>
+
                             <i class="bi bi-arrows-angle-expand"></i>
                         </div>
                     </div>
